@@ -2,6 +2,10 @@ Revision history for pyModbusTCP
 
 0.x.x next release
 
+    - add module error MB_SOCK_CLOSE_ERR (occur if frame send on close socket).
+    - add modbus exception EXP_NEGATIVE_ACKNOWLEDGE (code 0x07) to constants.
+    - add last_error_txt() and last_except_txt() for produce human readable status.
+    - add EXP_TXT, EXP_DETAILS and MB_ERR_TXT dicts to constants (text representation of codes).
     - update of the compatibility test for python version: remove 2.6/3.2/3.3, add 3.7/3.8/3.9.
     - conform to PEP 396 (add pyModbusTCP.__version__ field).
 
